# qt_modular_app

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/qml/: MainWindow.qml  PomodoroWindow.qml
modules/: CMakeLists.txt
modules/timer/: CMakeLists.txt  pomodoro_timer.cpp  timer.cpp
modules/timer/include/: pomodoro_timer.h
modules/todo/: CMakeLists.txt
qml/: CMakeLists.txt
qml/app/: MainWindow.qml
services/: CMakeLists.txt
services/serialize/: CMakeLists.txt
services/serialize/include/: i_serializable.h  serializer.h
src/: CMakeLists.txt
src/app/: main.cpp
src/include/: timer.h
src/module/timer/: timer.cpp
test/: CMakeLists.txt  test_serialize.cpp  user_data.h
